Fix imports and make Java 8 compatible